--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.0.7",
+    "react-icons": "^5.5.0",
     "resend": "^4.4.0",
     "zod": "^3.24.3"
   },
