Refactor code structure for improved readability and maintainability

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,15 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+   
+    // other options...
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    
+  
+}
+  
+
 }
