--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-email": "^4.0.7",
     "react-icons": "^5.5.0",
+    "react-quill": "^0.0.2",
     "resend": "^4.4.0",
     "zod": "^3.24.3"
   },
