--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-email/components": "^0.0.36",
+    "@tinymce/tinymce-react": "^6.1.0",
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
@@ -22,7 +23,6 @@
     "react-dom": "^19.0.0",
     "react-email": "^4.0.7",
     "react-icons": "^5.5.0",
-    "react-quill": "^0.0.2",
     "resend": "^4.4.0",
     "zod": "^3.24.3"
   },
